--- a/.github/workflows/neon_demo.yaml
+++ b/.github/workflows/neon_demo.yaml
@@ -48,7 +48,8 @@ jobs:
        
 
       - name: Run Migrations
-        run: npm run migrate:up
+        run: npm install && npm run migrate:down npm run migrate:up
+
         env:
           # to use pooled connection
           DATABASE_URL: "${{ steps.create_neon_branch.outputs.db_url_with_pooler }}"
